5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1807_2572.log
== TEST (2019-06-13 07:34:10) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0

for i in range(size(x)):
	if x[i]% == 1:
		h +=1
-- ERROR:
File "XXXX", line 8
    if x[i]% == 1:
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:34:26) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0

for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:34:41) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0

for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1
	print(x[i]%2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:34:54) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0

for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:37:42) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
b = 0
for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1

a = zeros(size(h))

for i in range(size(x)):
	if x[i]%2 == 1:
		a[b] = x[i]
		b += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:38:06) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
b = 0
for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:38:16) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
b = 0
for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:38:22) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
b = 0
for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:38:28) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
b = 0
for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:38:44) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
b = 0
for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1

a = zeros(size(h))

for i in range(size(x)):
	if x[i]%2 == 1:
		a[b] = x[i]
		b += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:38:57) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
b = 0
for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1

a = zeros(size(h))

for i in range(size(x)):
	if x[i]%2 == 1:
		a[b] = x[i]
		b += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:39:41) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
b = 0
for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1

a = zeros(h,dtype=in)

for i in range(size(x)):
	if x[i]%2 == 1:
		a[b] = x[i]
		b += 1
-- ERROR:
File "XXXX", line 11
    a = zeros(h,dtype=in)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:39:43) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
b = 0
for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1

a = zeros(h,dtype=in)

for i in range(size(x)):
	if x[i]%2 == 1:
		a[b] = x[i]
		b += 1
-- ERROR:
File "XXXX", line 11
    a = zeros(h,dtype=in)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:39:46) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
b = 0
for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1

a = zeros(h,dtype=int)

for i in range(size(x)):
	if x[i]%2 == 1:
		a[b] = x[i]
		b += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:39:54) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
b = 0
for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1

a = zeros(h,dtype=int)

for i in range(size(x)):
	if x[i]%2 == 1:
		a[b] = x[i]
		b += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 07:40:01) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
b = 0
for i in range(size(x)):
	if x[i]%2 == 1:
		h +=1

a = zeros(h,dtype=int)

for i in range(size(x)):
	if x[i]%2 == 1:
		a[b] = x[i]
		b += 1
print(a)
-- EXECUTION TIME:
0.983684
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
